Fix gap between menu items as according to review

--- a/src/styles/MasterPage.module.less
+++ b/src/styles/MasterPage.module.less
@@ -32,13 +32,15 @@
 }
 
 .MenuHeader {
-  width: 100%;
   font-weight: normal;
   padding: 0;
   background-color: transparent;
   position: absolute;
   z-index: 100;
   height: @navbar-height;
+  display: flex;
+  flex-direction: column;
+  width: 100vw;
 }
 
 .MenuCol {
